gitops/test/whisper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frida-carclaims-test
  labels:
    app.kubernetes.io/part-of: frida-carclaims
