gitops/test/whisper/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: whisper
  namespace: frida-carclaims-test
  labels:
    app: whisper
spec:
  to:
    kind: Service
    name: whisper
  port:
    targetPort: http
  tls:
    termination: edge
