gitops/test/whisper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper
  namespace: frida-carclaims-test
  labels:
    app: whisper
spec:
  selector:
    app: whisper
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
